<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Carpooling</string>
    <string name="snackbar_ok" translatable="false">OK</string>
    <string name="hint_login_email" translatable="false">Email</string>
    <string name="btn_login" translatable="false">Login</string>
    <string name="channel_new_booking" translatable="false">Nuove prenotazioni</string>
    <string name="channel_new_cancel" translatable="false">Nuove cancellazioni</string>
    <string name="channel_delete_ride" translatable="false">Viaggi annullati</string>

    <string name="label_fragment_login">Sign in</string>
    <string name="label_fragment_search">Search</string>
    <string name="label_fragment_search_result">Results</string>
    <string name="label_fragment_profile">Profile</string>
    <string name="label_fragment_settings">Settings</string>
    <string name="label_fragment_history">History</string>
    <string name="label_fragment_publish">Publish</string>
    <string name="label_fragment_myrides">Rides</string>
    <string name="title_received_feedback">Received feedback</string>
    <string name="title_sent_feedback">Sent feedback</string>
    <string name="title_publish_start">Where do you depart from and where do you arrive?</string>
    <string name="title_publish_date">Insert the departure date</string>
    <string name="title_publish_time">What are the departure and arrival times?</string>
    <string name="title_publish_seats">How many seats are available?</string>
    <string name="title_publish_options">Insert your preferences about the ride</string>
    <string name="title_publish_notes">If there is anything else to know, write it here</string>
    <string name="title_publish_price">Insert the ride\'s price</string>
    <string name="title_publish_summary">Review your ride before publishing it</string>
    <string name="title_login">To log in insert your email and your password</string>
    <string name="title_search_results">Search results</string>
    <string name="title_ride_summary">Ride summary</string>
    <string name="title_modify_profile">Modify profile</string>
    <string name="title_send_feedback">Add review</string>
    <string name="bottom_bar_search">Search</string>
    <string name="bottom_bar_publish">Publish</string>
    <string name="bottom_bar_myrides">Rides</string>
    <string name="bottom_bar_history">History</string>
    <string name="bottom_bar_profile">Profile</string>
    <string name="snackbar_get_location_error">Unable to get current position</string>
    <string name="snackbar_send_feedback_success">Review sent</string>
    <string name="snackbar_cancel_booking_success">Booking cancelled</string>
    <string name="snackbar_cancel_ride_success">Ride cancelled</string>
    <string name="snackbar_publish_success">Ride published</string>
    <string name="snackbar_booking_success">Booking made</string>
    <string name="snackbar_update_profile_success">Profile updated</string>
    <string name="label_field_remember_me">Remember me</string>
    <string name="label_field_publish_smoking">Is it possible to smoke aboard?</string>
    <string name="label_field_publish_luggage">Is it possible to bring luggages?</string>
    <string name="label_field_publish_silent">Is the ride silent?</string>
    <string name="label_field_publish_price">Price</string>
    <string name="label_profile_driver_rating">Driver rating</string>
    <string name="label_profile_passenger_rating">Passenger rating</string>
    <string name="label_profile_bio">Biography</string>
    <string name="label_write_feedback_recipient">Recipient</string>
    <string name="label_write_feedback_text">Text</string>
    <string name="label_item_feedback_rating">Rating</string>
    <string name="label_write_feedback_rating">Rating</string>
    <string name="field_search_query_datetime_format">The day %1$s from %2$s</string>
    <string name="hint_login_password">Password</string>
    <string name="hint_modify_username">Username</string>
    <string name="hint_modify_bio">Biography</string>
    <string name="helper_publish_notes">For example the car\'s model</string>
    <string name="helper_publish_price">For example 5.50</string>
    <string name="helper_modify_username">This is the name other users will see</string>
    <string name="helper_modify_bio">Here you can write something about you</string>
    <string name="helper_write_feedback_text">Write what you think about the ride shared</string>
    <string name="error_invalid_email">Email not valid</string>
    <string name="error_invalid_password">Password must be at least 6 characters long</string>
    <string name="error_publish_price">Insert a valid price</string>
    <string name="error_login_failed">Login error</string>
    <string name="error_field_location">The position is not valid</string>
    <string name="error_necessary_rating">To proceed a rating is necessary</string>
    <string name="btn_publish">Publish</string>
    <string name="btn_cancel_booking">Cancel booking</string>
    <string name="btn_delete_ride">Cancel published ride</string>
    <string name="btn_next">Next</string>
    <string name="btn_search">Search</string>
    <string name="btn_date">Date</string>
    <string name="btn_time">Time</string>
    <string name="btn_book">Book</string>
    <string name="btn_add_feedback">Add a review</string>
    <string name="btn_send_feedback">Send</string>
    <string name="btn_received_feedback">Received feedback</string>
    <string name="btn_my_feedback">Sent feedback</string>
    <string name="btn_modify">Modify</string>
    <string name="btn_modify_profile">Modify</string>
    <string name="btn_start_login">Sign in</string>
    <string name="tab_item_published">Published</string>
    <string name="tab_item_booked">Booked</string>
    <string name="action_bar_settings">Settings</string>
    <string name="action_bar_logout">Logout</string>
    <string name="dialog_logout_confirmation_title">Are you sure you want to log out?</string>
    <string name="dialog_confirmation_back">Back</string>
    <string name="dialog_logout_confirmation_yes">Logout</string>
    <string name="dialog_book_ride_title">Proceed with the booking?</string>
    <string name="dialog_cancel_ride_title">Are you sure you want to cancel this ride?</string>
    <string name="dialog_cancel_booking_title">Are you sre you want to cancel your booking?</string>
    <string name="dialog_publish_title">Proceed with publishing?</string>
    <string name="dialog_publish_yes">Publish</string>
    <string name="dialog_book_ride_yes">Book</string>
    <string name="dialog_cancel_booking_yes">Cancel booking</string>
    <string name="dialog_cancel_ride_yes">Cancel ride</string>
    <string name="dialog_send_feedback_title">Send feedback?</string>
    <string name="dialog_send_feedback_yes">Send</string>
    <string name="channel_new_booking_desc">This channel notifies you about new bookings for the ride you have published</string>
    <string name="channel_new_cancel_desc">This channel notifies you about cancelled bookings for ride you have published</string>
    <string name="channel_delete_ride_desc">This channel notifies you about cancelled ride you had booked</string>
    <string name="notif_new_booking_title">New booking</string>
    <string name="notif_new_booking_desc">A user booked a seat for a ride you published</string>
    <string name="notif_new_cancel_title">Booking cancelled</string>
    <string name="notif_new_cancel_desc">A user cancelled a booking for a ride you published</string>
    <string name="notif_delete_ride_title">Ride cancelled</string>
    <string name="notif_delete_ride_desc">A ride you booked has been cancelled</string>
    <string name="location_permission_required">To use your position for research permissions are required</string>
    <string name="location_permission_granted">Now you can use your position for resarches</string>
    <string name="use_current_location">Use your current position</string>
    <string name="descStartFragment">Travel alongside your coworker with ease</string>
    <string name="from">Departure from</string>
    <string name="to">Arrival to</string>
    <string name="price">Price</string>
    <string name="departure_time">Departure time</string>
    <string name="arrival_time">Arrival time</string>
    <string name="notes">Additional notes</string>
    <string name="insert">Insert</string>
    <string name="driver">Driver</string>
    <string name="passengers">Passengers</string>
    <string name="you">You</string>
    <string name="luggage">Luggage</string>
    <string name="silent">Silence</string>
    <string name="smoking">Smoking</string>
    <string name="settings_title_notifications">Notifications</string>
    <string name="settings_action_notifications">Enable notifications</string>
    <string name="settings_currency_title">Currency</string>
    <string name="settings_title_currency_category">Currency options</string>
    <string name="title_app" translatable="false">CARPOOLING</string>
    <string name="format_field_available_seats">Available seats: %1$d</string>
    <string name="label_profile_passenger_ride_count">Total rides as passenger:</string>
    <string name="label_profile_driver_ride_count">Total rides as driver:</string>
    <string name="label_profile_passenger_feedback_count">Passenger feedback received:</string>
    <string name="label_profile_driver_feedback_count">Driver feedback received:</string>
    <string name="label_fragment_profile_feedback">Feedback</string>
    <string name="tab_title_published">Published</string>
    <string name="tab_title_booked">Booked</string>
    <string name="tab_title_passenger">Passenger</string>
    <string name="tab_title_driver">Driver</string>
    <string name="label_search_results_empty">No rides were found for the given query.</string>
    <string name="snackbar_processing_request_error">Something went wrong, try again later</string>
</resources>