<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.publish.PublishTimeFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.carpooling.viewmodels.PublishViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <TextView
            android:id="@+id/title_publish_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_publish_time"
            android:textSize="24sp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintTop_toTopOf="@id/guideline_top" />

        <TextView
            android:id="@+id/label_departure_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/departure_time"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/title_publish_time" />

        <TextView
            android:id="@+id/field_departure_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/text_view_round_corner"
            android:clickable="true"
            android:textSize="24sp"
            android:text="@{viewModel.departureTime}"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/label_departure_time" />

        <TextView
            android:id="@+id/label_arrival_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/arrival_time"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/field_departure_time" />

        <TextView
            android:id="@+id/field_arrival_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/text_view_round_corner"
            android:clickable="true"
            android:textSize="24sp"
            android:text="@{viewModel.arrivalTime}"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/label_arrival_time" />

        <Button
            android:id="@+id/btn_to_publish_seats"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/btn_next"
            android:enabled="false"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@id/field_arrival_time" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>