<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_ride_basic_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        card_view:cardCornerRadius="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_ride_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toTopOf="@id/guideline_top" />

            <TextView
                android:id="@+id/field_ride_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/label_ride_from" />

            <TextView
                android:id="@+id/label_ride_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/to"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/field_ride_from" />

            <TextView
                android:id="@+id/field_ride_to"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/label_ride_to" />

            <TextView
                android:id="@+id/label_ride_departure_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/departure_time"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/field_ride_to" />

            <TextView
                android:id="@+id/field_ride_departure_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_45"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/label_ride_departure_time" />

            <TextView
                android:id="@+id/label_ride_arrival_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/arrival_time"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/guideline_vertical_65"
                app:layout_constraintTop_toBottomOf="@+id/field_ride_to" />

            <TextView
                android:id="@+id/field_ride_arrival_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical_65"
                app:layout_constraintTop_toBottomOf="@id/label_ride_arrival_time" />

            <TextView
                android:id="@+id/label_ride_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/btn_date"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/field_ride_departure_time" />

            <TextView
                android:id="@+id/field_ride_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@id/guideline_vertical_55"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/label_ride_date"
                app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"/>

            <TextView
                android:id="@+id/label_ride_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/price"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical_65"
                app:layout_constraintTop_toBottomOf="@id/field_ride_arrival_time" />

            <TextView
                android:id="@+id/field_ride_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical_65"
                app:layout_constraintTop_toBottomOf="@id/label_ride_price"
                app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical_45"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.45" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical_65"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.65" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical_55"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.55" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.95" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>